--- a/atividades/atividade25052022/index.html
+++ b/atividades/atividade25052022/index.html
@@ -26,10 +26,11 @@
 
         <nav>
             <ul class="menu">
-                <li class="item__menu"><img src="/img/pawprint 2.png" alt="">Categorias</li>
-                <li class="item__menu"><img src="/img/pawprint 2.png" alt="">Pets</li>
-                <li class="item__menu"><img src="/img/pawprint 2.png" alt="">Quem somos</li>
-                <li class="item__menu"><img src="/img/pawprint 2.png" alt="">Contato</li>                
+
+                <li class="item__menu"><img src="/img/pawprint 2.png" alt=""><a href="">Categorias</a></li>
+                <li class="item__menu"><img src="/img/pawprint 2.png" alt=""><a href="">Pets</a></li>
+                <li class="item__menu"><img src="/img/pawprint 2.png" alt=""><a href="">Quem somos</a></li>
+                <li class="item__menu"><img src="/img/pawprint 2.png" alt=""><a href="">Contato</a></li>                
             </ul>
         </nav>
 
@@ -94,6 +95,19 @@
 
             </div>
         </section>
+        <div class="form">
+            <h2>Contato</h2>
+            <div class="form__box"><span class="form__txt">Nome e sobrenome</span></div>
+            <div class="form__box"><span class="form__txt">Email</span></div>
+            <div class="form__box"><span class="form__txt">Telefone</span></div>
+
+            <div class="buttons">
+                <div class="button__limpar"><span class="button__limpar">Limpar</span></div>
+                <div class="button__enviar"><span class="button__enviar">Enviar</span></div>
+             </div>         
+        </div>
+
+        
     </main>
 
     <footer>
