--- a/atividades/atividade25052022/index.html
+++ b/atividades/atividade25052022/index.html
@@ -27,10 +27,10 @@
         <nav>
             <ul class="menu">
 
-                <li class="item__menu"><img src="/img/pawprint 2.png" alt=""><a href="">Categorias</a></li>
-                <li class="item__menu"><img src="/img/pawprint 2.png" alt=""><a href="">Pets</a></li>
-                <li class="item__menu"><img src="/img/pawprint 2.png" alt=""><a href="">Quem somos</a></li>
-                <li class="item__menu"><img src="/img/pawprint 2.png" alt=""><a href="">Contato</a></li>                
+                <li><img src="/img/pawprint 2.png" alt=""><a  class="item__menu" href="">Categorias</a></li>
+                <li><img src="/img/pawprint 2.png" alt=""><a  class="item__menu" href="">Pets</a></li>
+                <li><img src="/img/pawprint 2.png" alt=""><a  class="item__menu" href="">Quem somos</a></li>
+                <li><img src="/img/pawprint 2.png" alt=""><a  class="item__menu" href="">Contato</a></li>                
             </ul>
         </nav>
 
@@ -106,25 +106,43 @@
                 <div class="button__enviar"><span class="button__enviar">Enviar</span></div>
              </div>         
         </div>
-
         
     </main>
+
+    <div class="insc">
+
+        <h2 class="title">
+            <img src="/img/enviar-correo 1.png" alt="">
+            <span class="top__titulo">Inscreva-se para mais novidades</span>
+
+        </h2>
+
+        <div class="insc__form">
+            <div class="insc__box">
+                <span class="form__txt">Informe seu email</span></div> 
+            </div>
+
+        </div>    
+
+        <div class="btn">Enviar</div>
+
+    </div>
 
     <footer>
         <div class="contato">
 
            <div class="contato__icon">
-                <img class="" src="/img/Icono.png" alt="">
+                <img src="/img/Icono.png" alt="">
                 <img src="/img/Icono (2).png" alt="">
                 <img src="/img/Icono (1).png" alt="">
            </div>
 
            <div class="contato__conteudo">
-                <h2 class="">Localização</h2>
+                <h2>Localização</h2>
                 <span class="contato__txt">São Paulo</span>
-                <h2 class="">Telefone</h2>
+                <h2>Telefone</h2>
                 <span class="contato__txt">(11) 9 1111-1111</span>
-                <h2 class="">Email</h2>
+                <h2>Email</h2>
                 <span class="contato__txt">Email</span>
            </div>
             
