att de atividades e algumas criações

--- a/atividades/aula21062022-bootstrap/index.html
+++ b/atividades/aula21062022-bootstrap/index.html
@@ -7,19 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS only -->
-    <link href="./css/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./css/style.css">
-    <title> Portfólio | Daniel Oliveira </title>
+    <title> Portfolio | Taynara Dutra </title>
 </head>
 
 <body>
 
     <header>
-        <div class="container container-nav bg-light">
-            <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container container-nav">
+            <nav class="navbar navbar-expand-lg bg-dark">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        Daniel Oliveira
+                        Taynara Dutra
+
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,61 +54,55 @@
         <div class="container">
             <div class="row  container-user d-flex flex-column justify-content-center align-items-center">
 
-                <h1 class="text-center">Daniel Oliveira</h1>
+                <h1 class="text-center">Taynara Dutra</h1>
                 <hr>
-                <h2 class="text-center"> Estudante Front-end | </h2>
+                <h2 class="text-center"> Prof. Front-end | Mestra em Computação</h2>
             </div>
         </div>
 
     </section>
 
-    <section id="sec-usuario">
-        <div class="container p-4">
-            <h2 class="text-center">Portfólio</h2>
-            <hr>
-            <div class="row  container-cards d-flex justify-content-center align-items-center ">
+    <section>
+        <div class="container">
 
-                <div class="card col-6 col-lg-3 col-md-4 m-4  border-0">
-                    <img src="./img/lemon-pie.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3 class="text-center">lemon pie</h3>
-                    </div>
-                </div>
+            <h2 class="text-center">Portfolio</h2>
+            <div class="row  container-cards d-flex justify-content-center align-items-center">
 
-                <div class="card col-6 col-lg-3 col-md-4 m-4  border-0">
-                    <img src="./img/CVBatman.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3 class="text-center">CV Batman</h3>
-                    </div>
-                </div>
-
-                <div class="card col-6 col-lg-3 col-md-4 m-4  border-0">
-                    <img src="./img/super.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3 class="text-center">Supers</h3>
-                    </div>
-                </div>
-
-                <div class="card col-6 col-lg-3 col-md-4 m-4  border-0">
-                    <img src="./img/petshop.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3 class="text-center">Pet Shop</h3>
-                    </div>
-                </div>
-            
-                <div class="card col-6 col-lg-3 col-md-4 m-4 border-0">
-                    <img src="./img/piza.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3 class="text-center">Pizzaria</h3>
-                    </div>
-                </div>
-
-                <div class="card col-6 col-lg-3 col-md-4 m-4  border-0">
-                    <img src="./img/gameshop.png" class="card-img-top" alt="...">
+                <div class="card col-6 col-lg-3 col-md-4">
+                    <img src="./img/gameshop.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h3 class="text-center">Game Shop</h3>
                     </div>
                 </div>
+
+                <div class="card col-6 col-lg-3 col-md-4">
+                    <img src="./img/gameshop.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h3 class="text-center">Game Shop</h3>
+                    </div>
+                </div>
+
+                <div class="card col-6 col-lg-3 col-md-4">
+                    <img src="./img/gameshop.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h3 class="text-center">Game Shop</h3>
+                    </div>
+                </div>
+
+                <div class="card col-6 col-lg-3 col-md-4">
+                    <img src="./img/gameshop.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h3 class="text-center">Game Shop</h3>
+                    </div>
+                </div>
+                <div class="card col-6 col-lg-3 col-md-4">
+                    <img src="./img/gameshop.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h3 class="text-center">Game Shop</h3>
+                    </div>
+                </div>
+
+
 
             </div>
         </div>
@@ -115,7 +112,9 @@
 
 
     <!-- JavaScript Bundle with Popper -->
-    <script src="./js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
